# devcontext

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: CNAME  index.html
integrations/aider/: README.md
integrations/claude-code/: CLAUDE.md  settings.example.json
integrations/goose/: README.md
integrations/neovim/: README.md  devcontext.lua
integrations/vscode/: README.md  tasks.json
src/devcontext/: __init__.py  cli.py  config.py
src/devcontext/capture/: __init__.py  git_capture.py
src/devcontext/db/: __init__.py  database.py  models.py
src/devcontext/integrations/: __init__.py  mcp_server.py
src/devcontext/summary/: __init__.py  ollama.py
src/devcontext/utils/: __init__.py  formatting.py
tests/: __init__.py  test_database.py
